[package]
name = "codewars-rs"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.8", features = ["blocking", "json"]}
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"

